# minizip

./: .gitignore  CMakeLists.txt  build.sh  iowin32.c  iowin32.h
jni/: Android.mk  cflags.mk
